<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Path Recall</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="game_board_title">Path Recall</string>
    <string name="idle_state_description">Get ready</string>
    <string name="playing_path_state_description">Playing path...</string>
    <string name="draw_state_description">Draw the path</string>
    <string name="replay_state_description">Verifying</string>
    <string name="play_path_button_text">Play path</string>
    <string name="undo_button_text">Undo</string>
    <string name="verify_button_text">Verify</string>
    <string name="info_points_to_get">Points to get:</string>
    <string name="info_turns_number">Turns number:</string>
    <string name="info_hit">Hit:</string>
    <string name="info_miss">Miss:</string>
    <string name="score">Score</string>
    <string name="level">Level %d</string>
    <string name="remaining_lives">Lives remaining</string>
    <string name="game_over">Game over</string>
    <string name="ok">OK</string>
    <string name="game_over_subtitle">Your score: %d</string>
    <string name="button_clear_board">Clear</string>
    <string name="menu_start_new_game">Start game</string>
    <string name="menu_player_label">Player:</string>
    <string name="menu_difficulty_label">Difficulty:</string>
    <string name="menu_add_player_button">+</string>
    <string name="add_player_dialog_title">Create new player</string>
    <string name="add_player_label">Player name:</string>
    <string name="menu_quit">Exit</string>
    <string name="menu_about">About</string>
    <string name="about_text">Path Recall is an open source project.\nSource code can be found here:\n\nhttps://github.com/rafalur/PathRecall\n\nDeveloped by Rafal Urbaniak.\n\nContact: pathrecall@gmail.com</string>
    <string name="add_player_already_exists">Player already exists</string>
</resources>
