<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_gradient">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/offset_xlarge"
        android:src="@drawable/logo_one_line_600x180"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">
        <Button
            android:id="@+id/menuNewGameButton"
            style="@style/ButtonMenuStyle"
            android:text="@string/menu_start_new_game"
            android:layout_marginBottom="@dimen/offset_large"/>
        <Button
            android:id="@+id/menuAboutButton"
            style="@style/ButtonMenuStyle"
            android:text="@string/menu_about"
            android:layout_marginBottom="@dimen/offset_large"/>
        <Button
            android:id="@+id/menuExitButton"
            style="@style/ButtonMenuStyle"
            android:text="@string/menu_quit"
            android:layout_marginBottom="@dimen/offset_large"/>
    </LinearLayout>

</RelativeLayout>